--- a/src/app/styles/tailwind.css
+++ b/src/app/styles/tailwind.css
@@ -3,15 +3,15 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto-Regular';
   src: local('Roboto'), url(./fonts/Roboto-Regular.ttf) format('ttf');
 }
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto-Medium';
   src: local('Roboto'), url(./fonts/Roboto-Medium.ttf) format('ttf');
 }
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto-Medium';
   src: local('Roboto'), url(./fonts/Roboto-Bold.ttf) format('ttf');
 }
 
