--- a/src/features/friend-slider/model/styles.css
+++ b/src/features/friend-slider/model/styles.css
@@ -1,54 +1,72 @@
+.swiper {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  border-radius: 32px;
+}
 
-  .swiper {
-    width: 100%;
-    height: 100%;
-    background-color: #FFFFFF;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-  
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .swiper {
-    width: 614px;
-    height: 100px;
-  }
-  .append-buttons {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .append-buttons button {
-    display: inline-block;
-    cursor: pointer;
-    border: 1px solid #007aff;
-    color: #007aff;
-    text-decoration: none;
-    padding: 4px 10px;
-    border-radius: 4px;
-    margin: 0 10px;
-    font-size: 13px;
-  }
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
 
-  .swiper-button-prev{
-    background-color: #3456FF;
-    border-radius: 50%;
-  }
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .swiper-button-prev::after {
-    color: #FFFFFF;
-  }
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper {
+  width: 614px;
+  height: 100px;
+}
+.append-buttons {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.append-buttons button {
+  display: inline-block;
+  cursor: pointer;
+  border: 1px solid #007aff;
+  color: #007aff;
+  text-decoration: none;
+  padding: 4px 10px;
+  border-radius: 4px;
+  margin: 0 10px;
+  font-size: 13px;
+}
+
+.swiper-button-prev {
+  background-color: #3456ff;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  top: 60px;
+}
+
+.swiper-button-next {
+  background-color: #3456ff;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  top: 60px;
+}
+
+.swiper-button-prev::after {
+  color: #ffffff;
+  font-size: 14px;
+}
+
+.swiper-button-next::after {
+  color: #ffffff;
+  font-size: 14px;
+}
+
