--- a/src/app/styles/tailwind.css
+++ b/src/app/styles/tailwind.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Roboto-Regular';
-  src: local('Roboto'), url(./fonts/Roboto-Regular.ttf) format('ttf');
+  src: local('Roboto'), url(/public/fonts/Roboto-Regular.ttf) format('ttf');
 }
 @font-face {
   font-family: 'Roboto-Medium';
@@ -15,8 +15,8 @@
   src: local('Roboto'), url(./fonts/Roboto-Bold.ttf) format('ttf');
 }
 
-@layer base {
+/* @layer base {
   html {
     font-family: Roboto, system-ui, sans-serif;
   }
-}
+} */
