--- a/src/features/friend-slider/model/styles.css
+++ b/src/features/friend-slider/model/styles.css
@@ -1,14 +1,14 @@
 .swiper {
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
+  background-color: white;
   border-radius: 32px;
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  background: white;
 
   /* Center slide text vertically */
   display: flex;
@@ -61,12 +61,11 @@
 }
 
 .swiper-button-prev::after {
-  color: #ffffff;
+  color: white;
   font-size: 14px;
 }
 
 .swiper-button-next::after {
-  color: #ffffff;
+  color: white;
   font-size: 14px;
 }
-
